Draw main frame custom scrollbars in root layer scrolling mode.

Draw main frame custom scrollbars in root layer scrolling mode. On RLS custom
scrollbars are picked from CompositedLayerMapping, Non-RLS  custom scrollbars
are picked from PaintLayerCompositor.

BUG=623853

Review-Url: https://codereview.chromium.org/2198853002
Cr-Commit-Position: refs/heads/master@{#417203}

Former-commit-id: 7dbeb9e5f11913900a9560691a60510376b6dc73